test/corpus/anything_in_text/assistant_commentary_format_has_less_than.test
==================
assistant commentary with < in format, works
:language(harmony)
==================
<|start|>assistant<|channel|>commentary to=functions.generate_file<|constrain|>js<on<|message|>{"template": "basic_html", "path": "index.html"}<|call|>
---
(source_file
    (message
      (start_token)
      header: (header_assistant_commentary
        (channel_token)
        function_name: (function_name)
        (constrain_token)
        format: (text)
      )
      (message_token)
      contents: (text)
      (call_token)))
