test/corpus/anything_in_text/content_has_tag.test
==================
Message contents has tag <|fim_prefix|> => should parse all of it as contents text (one node)
:language(harmony)
==================
<|start|>user<|message|>I need you to fill in at <|fim_prefix|> <|end|>
---
(source_file
  (message
    (start_token)
    header: (header_user)
    (message_token)
    contents: (text)
    (end_token)))
