test/corpus/message.user.txt
==================
User message
==================
<|start|>user<|message|>What time is it?<|end|>
---
(source_file
  (message
    (start_token)
    header: (header_user)
    (message_token)
    contents: (text)
    (end_token)))
